--- a/style.css
+++ b/style.css
@@ -2,11 +2,31 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   line-height: 1.5;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+footer {
+  text-align: center;
+  padding: 10px 0;
 }
 
 h1,
@@ -19,16 +39,45 @@ h6 {
   text-wrap: balance;
 }
 
+a {
+  text-decoration: none;
+}
+
+h2 a {
+  color: black;
+}
+
+h2 a:hover {
+  color: grey;
+}
+
 img {
   max-width: 100%;
 }
 
-nav a {
-  text-decoration: none;
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  background-color: #F1F4F7;
+  align-items: center;
 }
 
-nav a:hover {
-  text-decoration: underline;
+.nav-menu {
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-menu a {
+  color: black;
+
+}
+
+.nav-menu a:hover{
+  color: grey;
+}
+
+li {
+  padding: 10px;
 }
 
 /* Can be used to style the active navigation link. */
