update how-to page

--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ main div {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 75%;
+  justify-content: center;
+  max-width: 60%;
 }
 
 footer {
@@ -61,7 +62,7 @@ h2 a:hover {
 main img {
   display: block;
   max-width: 50%;
-  max-height: 35%;
+  max-height: 50%;
   width: auto;
   height: auto;
 }
@@ -103,6 +104,10 @@ blockquote {
 
 .nav-menu a:hover{
   color: #BB3C3C;
+}
+
+.external-link:hover {
+  text-decoration: #BB3C3C wavy underline;
 }
 
 li {
