--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ main div {
   align-items: center;
   justify-content: center;
   max-width: 60%;
+  margin: 20px 20px 0 0;
 }
 
 footer {
@@ -108,6 +109,13 @@ blockquote {
 
 .external-link:hover {
   text-decoration: #BB3C3C wavy underline;
+}
+
+.history {
+  border: 2px solid #000; /* Adjust border thickness and color */
+  box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.2); /* Add a shadow */
+  padding: 15px; /* Add padding inside the div */
+  border-radius: 8px; /* Optional: rounded corners */
 }
 
 li {
